[project]
name = "gym-aloha-dummy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dm-control>=1.0.27",
    "gymnasium>=1.0.0",
    "imageio[ffmpeg]>=2.37.0",
    "ipython>=8.32.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "gym-aloha-dummy",
]

[tool.uv.sources]
gym-aloha-dummy = { workspace = true }
